--- a/GoogleImageSearcher/res/menu/menu_image_details.xml
+++ b/GoogleImageSearcher/res/menu/menu_image_details.xml
@@ -3,9 +3,10 @@
     tools:context="com.codepath.vandanab.googleimagesearcher.ImageDetailsActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_share"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_social_share"
+        android:title="@string/share_label" />
 
 </menu>
