--- a/GoogleImageSearcher/res/menu/menu_search.xml
+++ b/GoogleImageSearcher/res/menu/menu_search.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <item android:id="@+id/miSearch"
+          android:orderInCategory="2"
+          android:title="@string/search_label"
+          android:icon="@drawable/ic_action_search"
+          android:showAsAction="always|collapseActionView"
+          android:actionViewClass="android.widget.SearchView" />
+
     <item
         android:id="@+id/miSettings"
+        android:orderInCategory="3"
         android:icon="@drawable/ic_action_settings"
         android:title="@string/action_settings"
         android:showAsAction="always" />
