--- a/GoogleImageSearcher/res/layout/activity_image_details.xml
+++ b/GoogleImageSearcher/res/layout/activity_image_details.xml
@@ -6,15 +6,14 @@
 
     <ImageView
         android:id="@+id/ivImageDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_margin="10dp"
         android:adjustViewBounds="true"
-        android:maxWidth="600dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_launcher" />
 
